cmake_minimum_required(VERSION 3.20)
project(cpp_programming)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "-fexec-charset=CP949")

#add_executable(cpp_programming main.cpp)
#add_executable(main main.cpp)
#add_executable(chapter2_2-1_ex01 chapter2/2-1/ex01.cpp)
#add_executable(chapter2_2-1_ex02 chapter2/2-1/ex02.cpp)
#add_executable(chapter2_2-1_ex03 chapter2/2-1/ex03.cpp)
#add_executable(chapter2_2-2_typesize chapter2/2-2/typesize.cpp)
#add_executable(chapter2_2-2_2-7 chapter2/2-2/2-7.cpp)
#add_executable(chapter2_2-4_2-4 chapter2/2-4/2-4.cpp)
#add_executable(chapter2_2-5_2_5 chapter2/2-5/2_5.cpp)
#add_executable(chapter2_2-6_2_6 chapter2/2-6/2_6.cpp)
#add_executable(chapter2_2-6_2_8 chapter2/2-6/2_8.cpp)
#add_executable(chapter2_2-6_2_10 chapter2/2-6/2_10.cpp)
#add_executable(chapter2_2-6_2_11 chapter2/2-6/2_11.cpp)
#add_executable(chapter2_2-6_2_12 chapter2/2-6/2_12.cpp)
#add_executable(chapter2_2-6_2-17 chapter2/2-6/2-17.cpp)
#add_executable(chapter3_3-1_3-1 chapter3/3-1/3-1.cpp)
#add_executable(chapter3_3-1_3-2 chapter3/3-1/3-2.cpp)
#add_executable(chapter3_3-1_3-3 chapter3/3-1/3-3.cpp)
#add_executable(chapter3_3-2_3-5 chapter3/3-2/3-5.cpp)
#add_executable(chapter3_3-3_3-8 chapter3/3-3/3-8.cpp)
#add_executable(chapter3_3-3_3-9 chapter3/3-3/3-9.cpp)
#add_executable(chapter3_3-5_3-17 chapter3/3-5/3-17.cpp)
#add_executable(chapter3_3-5_3-17_1 chapter3/3-5/3-17_1.cpp)
#add_executable(chapter3_3-5_3_18 chapter3/3-5/3_18.cpp)
#add_executable(chapter3_test_test3 chapter3/test/test3.cpp)
#add_executable(chapter3_test_test4 chapter3/test/test4.cpp)
#add_executable(chapter4_4-2 chapter4/4-2.cpp)
#add_executable(chapter4_4-3 chapter4/4-3.cpp)
#add_executable(chapter4_ex02 chapter4/4-1/ex02.cpp)
#add_executable(chapter4_4-2_4-5 chapter4/4-2/4-5.cpp)
#add_executable(chapter4_4-2_4-6 chapter4/4-2/4-6.cpp)
#add_executable(chapter4_4-2_4-9 chapter4/4-2/4-9.cpp)
#add_executable(chapter4_4-3_4_10 chapter4/4-3/4_10.cpp)
#add_executable(chapter4_4-3_4-12 chapter4/4-3/4-12.cpp)
#add_executable(chapter4_4-3_test chapter4/4-3/test.cpp)
#add_executable(chapter4_4-3_4_13 chapter4/4-3/4_13.cpp)
#add_executable(chapter4_4-3_4_18 chapter4/4-3/4_18.cpp)
#add_executable(chapter4_4_4_4_16 chapter4/4-4/4_16.cpp)
#add_executable(chapter4_4_4_4_16 chapter4/4-4/4_16.c)
#add_executable(chapter4_4_5_4_18 chapter4/4-5/4_18.cpp)
#add_executable(chapter4_4_5_4_18 chapter4/4-5/4_18.c)
#add_executable(chapter4_4-6_4-19 chapter4/4-6/4-19.cpp)
#add_executable(chapter5_05-01 chapter5/05-01.cpp)
#add_executable(chapter5_5-2 chapter5/5-2.cpp)
#add_executable(chapter5_5-3 chapter5/5-3.cpp)
#add_executable(chapter5_5-2_2 chapter5/5-2_2.cpp)
#add_executable(chapter5_config chapter5/config.h)
#add_executable(chapter5_5-2_3 chapter5/5-2_3.cpp)
#add_executable(chapter5_5-4 chapter5/5-2/5-4.cpp)
#add_executable(chapter5_5-2_5-5 chapter5/5-2/5-5.cpp)
#add_executable(chapter5_5-2_ch05_sam01 chapter5/5-2/ch05_sam01.cpp)
#add_executable(chapter6_6-1_6-1 chapter6/6-1/6-1.cpp)
#add_executable(chapter6_6-3_6-3 chapter6/6-3/6-3.cpp)
#add_executable(chapter6_6-3_ex01 chapter6/6-3/ex01.cpp)
#add_executable(chapter6_6-3_rect chapter6/6-3/rect.cpp)
#add_executable(chapter6_6-3_ch06_rect chapter6/6-3/ch06_rect.h)
#add_executable(chapter6_6-4_6-4 chapter6/6-4/6-4.cpp)
#add_executable(chapter6_6-4_6-5 chapter6/6-4/6-5.cpp)
#add_executable(chapter6_6-4_6-6 chapter6/6-4/6-6.cpp)
#add_executable(chapter6_ch06_compare chapter6/ch06_compare.h)
#add_executable(chapter6_6-6_ch06_06_main chapter6/6-6/ch06_06_main.cpp)
#add_executable(chapter6_ch06_06_compare chapter6/ch06_06_compare.cpp)
#add_executable(chapter6_6-7_6-7 chapter6/6-7/6-7.cpp)
#add_executable(chapter6_6-7_6-8 chapter6/6-7/6-8.cpp)
#add_executable(chapter8_8-2_ch08_weight chapter8/8-2/ch08_weight.h)
#add_executable(chapter9_9-1_main ardent/chapter9/9-1/main.cpp)
#add_executable(chapter9_9-1_student1 ardent/chapter9/9-1/student1.h)
#add_executable(chapter9_9-1_student1 ardent/chapter9/9-1/student1.cpp)
#add_executable(alone_6-2_boxmessage alone/6-2/boxmessage.cpp)
#add_executable(alone_6-2_boxmessage2 alone/6-2/boxmessage2.cpp)
#add_executable(alone_6-2_exam_power alone/6-2/exam_power.cpp)
#add_executable(alone_6-3_CallRef2 alone/chapter6/6-3/CallRef2.cpp)
#add_executable(alone_chapter7_7-1_Extern1 alone/chapter7/7-1/Extern1.cpp)
#add_executable(alone_chapter7_7-1_Extern3 alone/chapter7/7-1/Extern3.cpp)
#add_executable(alone_chapter7_7-2_Static alone/chapter7/7-2/Static.cpp)
#add_executable(alone_chapter7_7-3_Scope alone/chapter7/7-3/Scope.cpp)
#add_executable(alone_chapter7_7-3_BlockScope alone/chapter7/7-3/BlockScope.cpp)
#add_executable(alone_chapter8_8-1_floor alone/chapter8/8-1/floor.cpp)
#add_executable(alone_chapter8_8-1_round alone/chapter8/8-1/round.cpp)
#add_executable(alone_chapter8_8-2_random alone/chapter8/8-2/random.cpp)
#add_executable(alone_chapter8_8-3_time alone/chapter8/8-3/time.cpp)
#add_executable(alone_chapter9_9-1_Array alone/chapter9/9-1/Array.cpp)
#add_executable(alone_chapter9_9-1_ArrayBound alone/chapter9/9-1/ArrayBound.cpp)
#add_executable(alone_chapter9_9-1_ArrayBound2 alone/chapter9/9-1/ArrayBound2.cpp)
#add_executable(alone_chapter9_9-3_ArrayC alone/chapter9/9-3/ArrayC.cpp)
#add_executable(alone_chapter9_9-3_Eratosthenes alone/chapter9/9-3/Eratosthenes.c)
#add_executable(alone_chapter9_9-3_printTomorrow alone/chapter9/9-3/printTomorrow.cpp)
#add_executable(alone_chapter9_9-3_RandTable alone/chapter9/9-3/RandTable.cpp)
#add_executable(alone_chapter9_9-3_GameMessage2 alone/chapter9/9-3/GameMessage2.cpp)
#add_executable(alone_chapter9_9-4_Sokoban alone/chapter9/9-4/Sokoban.cpp)
#add_executable(alone_chapter9_9-4_Sokoba alone/chapter9/9-4/Sokoba.c)
#add_executable(alone_chapter10_10-1_PointerMinus alone/chapter10/10-1/PointerMinus.cpp)
#add_executable(alone_chapter10_10-1_MidPointer alone/chapter10/10-1/MidPointer.cpp)
#add_executable(alone_chapter10_10-1_ptrplusplus alone/chapter10/10-1/ptrplusplus.cpp)
#add_executable(alone_chapter10_10-2_voidPointer alone/chapter10/10-2/voidPointer.cpp)
#add_executable(alone_chapter10_10-2_voidPointer2 alone/chapter10/10-2/voidPointer2.cpp)
#add_executable(alone_chapter10_10-2_voidDump alone/chapter10/10-2/voidDump.cpp)
#add_executable(alone_chapter10_10-2_NullTest alone/chapter10/10-2/NullTest.cpp)
#add_executable(alone_chapter10_10-3_malloc alone/chapter10/10-3/malloc.cpp)
#add_executable(alone_chapter10_10-3_realloc alone/chapter10/10-3/realloc.cpp)
#add_executable(alone_chapter10_10-4_dblPointer alone/chapter10/10-4/dblPointer.cpp)
#add_executable(alone_chapter10_10-4_FuncAlloc alone/chapter10/10-4/FuncAlloc.cpp)
#add_executable(alone_chapter10_10-4_FuncAlloc2 alone/chapter10/10-4/FuncAlloc2.cpp)
#add_executable(alone_chapter6_6-3_CallValue alone/chapter6/6-3/CallValue.cpp)
#add_executable(alone_chapter6_6-3_CallRef alone/chapter6/6-3/CallRef.cpp)
#add_executable(alone_chapter6_6-3_ValueRef alone/chapter6/6-3/ValueRef.cpp)
#add_executable(alone_chapter10_10-4_MainArg alone/chapter10/10-4/MainArg.cpp)
#add_executable(alone_chapter10_10-4_CalcArg alone/chapter10/10-4/CalcArg.cpp)
#add_executable(alone_chapter10_10-4_DynStrArray alone/chapter10/10-4/DynStrArray.cpp)
#add_executable(alone_chapter10_10-4_voidpp alone/chapter10/10-4/voidpp.cpp)
#add_executable(alone_chapter11_11-1_SubArray alone/chapter11/11-1/SubArray.cpp)
#add_executable(alone_chapter11_11-1_SubArray2 alone/chapter11/11-1/SubArray2.cpp)
#add_executable(alone_chapter11_11-1_ArrayIndex alone/chapter11/11-1/ArrayIndex.cpp)
#add_executable(alone_chapter11_11-1_ArrayIndex2 alone/chapter11/11-1/ArrayIndex2.cpp)
#add_executable(alone_chapter11_11-2_PointerArray alone/chapter11/11-2/PointerArray.cpp)
#add_executable(alone_chapter11_11-2_PASung alone/chapter11/11-2/PASung.cpp)
#add_executable(alone_chapter11_11-3_ArrayPointer alone/chapter11/11-3/ArrayPointer.cpp)
#add_executable(alone_chapter12_12-1_strcpy alone/chapter12/12-1/strcpy.c)
#add_executable(alone_chapter12_12-1_strncpy2 alone/chapter12/12-1/strncpy2.c)
#add_executable(alone_chapter12_12-1_strlen alone/chapter12/12-1/strlen.c)
#add_executable(alone_chapter12_12-1_InsertString alone/chapter12/12-1/InsertString.c)
#add_executable(alone_chapter19_19-1_ArrayInsDel alone/chapter19/19-1/ArrayInsDel.cpp)
#add_executable(alone_chapter19_19-1_DynArray alone/chapter19/19-1/DynArray.c)
#add_executable(alone_chapter19_19-1_JusoArray alone/chapter19/19-1/JusoArray.c)
#add_executable(alone_chapter19_19-2_SinleList alone/chapter19/19-2/SinleList.c)
#add_executable(alone_chapter13_13-2_Struct alone/chapter13/13-2/Struct.c)
#add_executable(alone_chapter19_19-2_StructPointer alone/chapter19/19-2/StructPointer.c)
#add_executable(alone_chapter19_19-2_DoubleList alone/chapter19/19-2/DoubleList.c)
#add_executable(alone_chapter20_20-1_Hashing alone/chapter20/20-1/Hashing.cpp)
#add_executable(alone_chapter20_20-1_MultiSlot alone/chapter20/20-1/MultiSlot.cpp)
#add_executable(alone_chapter20_20-1_LinearProbe alone/chapter20/20-1/LinearProbe.cpp)