cmake_minimum_required(VERSION 3.20)
project(cpp_programming)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "-fexec-charset=CP949")

#add_executable(cpp_programming main.cpp)
#add_executable(main main.cpp)
#add_executable(chapter2_2-1_ex01 chapter2/2-1/ex01.cpp)
#add_executable(chapter2_2-1_ex02 chapter2/2-1/ex02.cpp)
#add_executable(chapter2_2-1_ex03 chapter2/2-1/ex03.cpp)
#add_executable(chapter2_2-2_typesize chapter2/2-2/typesize.cpp)
#add_executable(chapter2_2-2_2-7 chapter2/2-2/2-7.cpp)
#add_executable(chapter2_2-4_2-4 chapter2/2-4/2-4.cpp)
#add_executable(chapter2_2-5_2_5 chapter2/2-5/2_5.cpp)
#add_executable(chapter2_2-6_2_6 chapter2/2-6/2_6.cpp)
#add_executable(chapter2_2-6_2_8 chapter2/2-6/2_8.cpp)
#add_executable(chapter2_2-6_2_10 chapter2/2-6/2_10.cpp)
#add_executable(chapter2_2-6_2_11 chapter2/2-6/2_11.cpp)
#add_executable(chapter2_2-6_2_12 chapter2/2-6/2_12.cpp)
#add_executable(chapter2_2-6_2-17 chapter2/2-6/2-17.cpp)
#add_executable(chapter3_3-1_3-1 chapter3/3-1/3-1.cpp)
#add_executable(chapter3_3-1_3-2 chapter3/3-1/3-2.cpp)
#add_executable(chapter3_3-1_3-3 chapter3/3-1/3-3.cpp)
#add_executable(chapter3_3-2_3-5 chapter3/3-2/3-5.cpp)
#add_executable(chapter3_3-3_3-8 chapter3/3-3/3-8.cpp)
#add_executable(chapter3_3-3_3-9 chapter3/3-3/3-9.cpp)
#add_executable(chapter3_3-5_3-17 chapter3/3-5/3-17.cpp)
#add_executable(chapter3_3-5_3-17_1 chapter3/3-5/3-17_1.cpp)
#add_executable(chapter3_3-5_3_18 chapter3/3-5/3_18.cpp)
#add_executable(chapter3_test_test3 chapter3/test/test3.cpp)
#add_executable(chapter3_test_test4 chapter3/test/test4.cpp)
#add_executable(alone_chapter13_13-3_ShallowCopy alone/chapter13/13-3/ShallowCopy.cpp)
#add_executable(alone_chapter13_13-4_Quiz alone/chapter13/13-4/Quiz.cpp)
#add_executable(alone_chapter7_7-1_Extern3 alone/chapter7/7-1/Extern3.cpp)
#add_executable(alone_chapter7_7-2_Static alone/chapter7/7-2/Static.cpp)
#add_executable(alone_chapter18_01_IncOverflow alone/chapter18/01/IncOverflow.cpp)
#add_executable(alone_chapter18_01_ReadEndian alone/chapter18/01/ReadEndian.cpp)
#add_executable(alone_chapter18_01_PrintFloat alone/chapter18/01/PrintFloat.cpp)
#add_executable(alone_chapter18_01_FloatError alone/chapter18/01/FloatError.cpp)
#add_executable(alone_chapter18_01_FloatError2 alone/chapter18/01/FloatError2.cpp)
#add_executable(alone_chapter18_01_StructAlign alone/chapter18/01/StructAlign.cpp)
add_executable(alone_chapter18_01_offsetof alone/chapter18/01/offsetof.cpp)